# godot-cpp_pre-built

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  godot-cpp_template.cmake
.github/workflows/: generate-artifacts.yml  generate_files.yml  run_tests.yml
